--- a/replay3d/index.html
+++ b/replay3d/index.html
@@ -3,7 +3,8 @@
     <title>Demo 07</title>
     <script type="text/javascript" src="js/three.js" ></script>
     <script type="text/javascript" src="js/OBJLoader.js" ></script>
-    <script type="text/javascript" src="replay.js" ></script>
+    <script type="text/javascript" src="js/OrbitControls.js" ></script>
+    <script type="text/javascript" src="js/replay.js" ></script>
     <style>
         body { margin: 0; }
         canvas { width: 100%; height: 100% }
